--- a/src/Components/Home/Home.module.scss
+++ b/src/Components/Home/Home.module.scss
@@ -1,6 +1,6 @@
 .homeContainer {
     // width: 90vw;
-    height: 10g0vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     flex-direction: row;
